Added the thank you note.

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,3 +2,5 @@
 <p> This website request users to enter a sentence</p>
 <p>It then display the original text following by the number of occorance of each word in the sentence.</p>
 <a href={% url 'home' %}>Return Home</a>
+
+Thank you for visiting.
